$Id$

Changes between 0.8.2 and 0.8.4-svn (not yet released):
-----------------------------------------------------

Core support:
* IPv6 and Extended passive mode support for FTP

Services discovery:
* Bleeding edge UPnP service discovery

Video Filters:
* RSS feed

Interfaces:
 * Mac OS X
    - new streaming and transcoding wizard with the same functionality as the WxWidgets one
 * wxWidgets
    - VLC update checker

Changes between 0.8.1 and 0.8.2:
-----------------------------------------------------

Core support:
 * Rewrite of the playlist
    - Tree structure
    - Input preparsing (for meta-data)
    - Grouping (by artist, ...) support 
 * Preferences improvements: 
    - New organization, designed to improve usability
    - New configuration types (list of modules, ...)
 * XML parsers
 * Core image manipulation support
 * Client-side SSL/TLS support
 * SSL Client certificates checking support (allows for secure VoD)
 * Renamed --spu-channel to --sub-track
 * Renamed --spumargin to --sub-margin
 * Renamed --audio-channel to --audio-track
 * Renamed --filter to --vout-filter
 * filters, extra interfaces, visualizations and service discovery modules are
   now separated by ':' instead of ','
 * Access filter architecture
 * Track selection based on preferred language (--sub-language and --audio-language)
 * Zsh autocompletion for VLC's arguments
 * Many bugfixes...

Input/Demuxers:
 * Support for SOCKS proxy
 * Support for Shoutcast Meta-data
 * Support for (HE-)AAC raw-audio streams
 * Support for images on a HTTP server that get refreshed on the server
 * Better support for Kasenna streams
 * RTSP UDP->TCP rollover support
 * Massive Matroska improvements
 * Support for XA and VOC audio files
 * TiVo demuxer
 * Samba (Windows shares) access module
 * Improved CDDAX module (uses several playlist items)
 * Fixes to Linux DVB support
 * Fix the "negative subtitles delay" bug
 * Support for FTP over IPv6

Decoders / Encoders:
 * Dirac decoder and encoder